--- a/src/app/shared/cranix-md-list/cranix-md-list.component.html
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.html
@@ -5,15 +5,15 @@
   </ion-item>
   <ion-buttons *ngIf="objectType != 'challenges/todo'" slot="end">
     <ion-button size="small" fill="solid" (click)="context.componentParent.redirectToEdit(null)"
-      matTooltip="{{'Create a new user' | translate }}">
+      matTooltip="{{'Create a new object' | translate }}">
       <ion-icon slot="icon-only" name="add-circle"></ion-icon>
     </ion-button>
     <ion-button size="small" fill="solid" (click)="context.componentParent.openActions($event,null)"
       matTooltip="{{'Apply actions on the selected objects' | translate }}">
       <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
     </ion-button>
-    <ion-button size="small" fill="solid" (click)="context.componentParent.openCollums($event)"
-      matTooltip="{{'Select the columns to show' | translate }}">
+    <ion-button *ngIf="objectType == 'challenge'" size="small" fill="solid" (click)="context.componentParent.showAllChallenges()"
+      matTooltip="{{ 'Show all challenges' | translate }}">
       <ion-icon slot="icon-only" name="apps"></ion-icon>
     </ion-button>
   </ion-buttons>
@@ -92,12 +92,16 @@
           <h5>{{ object.role | translate }}</h5>
           <h5>{{ object.classes }}</h5>
         </ion-label>
-        <ion-item  *ngIf="objectType == 'challenge'">
+        <ion-item  *ngIf="objectType == 'challenge' && object.creatorId == authService.session.userId">
           <div *ngIf="object.released && object.groups.length">{{objectService.formatGroups(object.groups)}}</div>
           <div *ngIf="object.released && object.users.length">{{objectService.formatUsers(object.users)}}</div>
-          <ion-buttons slot="end" >
-            <ion-button *ngIf="object.released" (click)="context.componentParent.evaluate(object.id)">{{'evaluate challenge'|translate}}</ion-button>
-            <ion-button *ngIf="!object.released" (click)="context.componentParent.assign(object)">{{'assign challenge'|translate}}</ion-button>  
+          <ion-buttons slot="end">
+            <ion-button *ngIf="object.released" (click)="context.componentParent.stopAndArchive(object)" matTooltip="{{'Stop and evaluate challenge and archive the results.'|translate}}">
+              <ion-icon slot="icon-only" name="stop-circle-outline"></ion-icon>
+            </ion-button>
+            <ion-button *ngIf="!object.released" (click)="context.componentParent.assign(object)" matTooltip="{{'Assign and start challenge.'|translate}}">
+              <ion-icon slot="icon-only" name="chevron-forward-circle-outline"></ion-icon>
+            </ion-button>  
           </ion-buttons>
         </ion-item>
       </ion-item>
